fdo#78980 i#98931 Accept args for .uno:InsertAnnotation

(adapted from commit 917c52f3219149741199015fce1740c5b13d814e)

Change-Id: I27b1b966135767d204a11a9d9f38ad6cc943ee61